--- a/beranda.html
+++ b/beranda.html
@@ -283,25 +283,25 @@
                 </div>
                 <div class="col-md-6">
                     <div class="restaurant-card">
-                        <img alt="Image of Dragon Tower restaurant" height="233"
-                            src="https://storage.googleapis.com/a1aa/image/2nwgey8j433cEqtU6UVzSDShko8CAL6pv7LHqkfDhupsqednA.jpg"
+                        <img alt="Image DR coffe" height="233"
+                            src="image/restoran/dr.jpg"
                             width="350" />
                         <div class="restaurant-info">
                             <p>
-                                Chinese
+                                Asia
                             </p>
                             <h5>
-                                Dragon Tower
+                                DR Coffe
                             </h5>
                             <p>
-                                22 Hertsmere Rd E14 4ED
+                                Sidorekso, Kudus
                             </p>
                             <span class="badge">
                                 <i class="fas fa-fire">
                                 </i>
                                 -50%
                             </span>
-                            Average price $35
+                            Rata - rata Harga Rp 20.000
                         </div>
                         <div class="restaurant-rating">
                             <i class="fas fa-star">
@@ -312,25 +312,25 @@
                 </div>
                 <div class="col-md-6">
                     <div class="restaurant-card">
-                        <img alt="Image of Sushi Gold restaurant" height="233"
-                            src="https://storage.googleapis.com/a1aa/image/LDBBObSN7RrrIZLJWh75v3ZJSAFXGb5z17L4l3jemSuUVfuTA.jpg"
+                        <img alt="Image kebab" height="233"
+                            src="image/restoran/kebab.jpg"
                             width="350" />
                         <div class="restaurant-info">
                             <p>
-                                Sushi - Japanese
+                                Kebab - Turki
                             </p>
                             <h5>
-                                Sushi Gold
+                                Kebab Kompeni
                             </h5>
                             <p>
-                                Old Shire Ln EN9 3RX
+                                Jl. Lingkar atas Jepara
                             </p>
                             <span class="badge">
                                 <i class="fas fa-fire">
                                 </i>
                                 -25%
                             </span>
-                            Average price $20
+                            Rata - rata Harga Rp 15.000
                         </div>
                         <div class="restaurant-rating">
                             <i class="fas fa-star">
@@ -341,25 +341,25 @@
                 </div>
                 <div class="col-md-6">
                     <div class="restaurant-card">
-                        <img alt="Image of Bella Napoli restaurant" height="233"
-                            src="https://storage.googleapis.com/a1aa/image/FPBWJ38CIqZaPlaSYAx436QWVOt7bWa3g21jo7Q5idIqqv7E.jpg"
+                        <img alt="Image pizza" height="233"
+                            src="image/restoran/pizza.jpg"
                             width="350" />
                         <div class="restaurant-info">
                             <p>
                                 Pizza - Italian
                             </p>
                             <h5>
-                                Bella Napoli
+                                Pizza HOTE
                             </h5>
                             <p>
-                                135 Newtownards Road BT4
+                                Kudus
                             </p>
                             <span class="badge">
                                 <i class="fas fa-fire">
                                 </i>
                                 -45%
                             </span>
-                            Average price $25
+                            Rata - rata Harga Rp 120.000
                         </div>
                         <div class="restaurant-rating">
                             <i class="fas fa-star">
