--- a/beranda.html
+++ b/beranda.html
@@ -22,12 +22,11 @@
 <link rel="stylesheet" href="/style css/beranda.css">
 
 <body>
-
-    <nav class="navbar navbar-expand-lg shadow-lg">
-        <div class="container">
-            <nav class="navbar bg-body-tertiary">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
+    <nav class="navbar navbar-expand-lg shadow-lg" >
+        <div class="container" >
+            <nav class="navbar bg-body-tertiary"  >
+                <div class="container">
+                    <a class="navbar-brand" href="#" >
                         <img src="/image/logo2.png" alt="Logo" width="40" height="34"
                             class="d-inline-block align-text-top">
                         Speed Dish
@@ -440,7 +439,7 @@
         </div>
         <div class="food-item d-flex">
             <img alt="Belut Cabe Ijo Socha" height="100"
-                src="https://storage.googleapis.com/a1aa/image/6VbJjwzrjUpL6wOQBqZm4yVv3L9UOcLqj8hIZuGqGv5X5LtdC.jpg"
+                src="https://s3-alpha-sig.figma.com/img/8ed9/4ff5/65e3fd6a4eebe00c64aede6f5f40c429?Expires=1731888000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=byMFdS4142xd8ovqQ06xyIeCy-~KdKaHppG3ZKkW9Ay5wZxgPQb6PwzTEJW25c25yDIUf0d4d2rjVvKPsoAntDJhX8FS27f-c~3ZQPHOc143mv8IsV17W5AKKDwOHTMyX8--WBkgdlnwxYlZq2INBFPO1TGs-f-y7U3u4kN9TeG9vLW8PbesxVl57KP4MmVuyyi8Y0rx0ri-Erw~QyxWb4ltfWsXVed95efFM5vBHhKbAKkpuuuMpZevcWFl8seuxjuTrNdGAsM-7w6bA4eCBPhSADeDZuKb8qwjLcCYKLGjXfzah2lDySlW646gWe~AraBqo~iv9ooc1JTBJfSiWw__"
                 width="100" />
             <div class="details">
                 <h5>
@@ -492,6 +491,7 @@
 
 
         <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#6a1b0c" fill-opacity="1" d="M0,192L26.7,165.3C53.3,139,107,85,160,101.3C213.3,117,267,203,320,229.3C373.3,256,427,224,480,192C533.3,160,587,128,640,138.7C693.3,149,747,203,800,208C853.3,213,907,171,960,160C1013.3,149,1067,171,1120,170.7C1173.3,171,1227,149,1280,149.3C1333.3,149,1387,171,1413,181.3L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z" style="--darkreader-inline-fill: #55160a;" data-darkreader-inline-fill=""></path></svg> -->
+
 
 </body>
 
