--- a/akun.html
+++ b/akun.html
@@ -116,6 +116,7 @@
             </i>
         </div>
         <div class="menu-item">
+            <a class="nav-link" href="login.html">
             <div>
                 <i class="fas fa-cog">
                 </i>
@@ -125,46 +126,23 @@
             </div>
             <i class="fas fa-chevron-right">
             </i>
+            </a>
         </div>
         <div class="menu-item">
-            <div>
-                <i class="fas fa-sign-out-alt">
+            <a class="nav-link" href="login.html">
+                <div>
+                    <i class="fas fa-sign-out-alt">
+                    </i>
+                    <span>
+                        Log Out
+                    </span>
+                </div>
+                <i class="fas fa-chevron-right">
                 </i>
-                <span>
-                    Log Out
-                </span>
-            </div>
-            <i class="fas fa-chevron-right">
-            </i>
+            </a>
         </div>
     </div>
-    <div class="footer">
-        <a href="#">
-            <i class="fas fa-home">
-            </i>
-            Beranda
-        </a>
-        <a href="#">
-            <i class="fas fa-heart">
-            </i>
-            Favorit
-        </a>
-        <a href="#">
-            <i class="fas fa-clipboard-list">
-            </i>
-            Pesanan
-        </a>
-        <a href="#">
-            <i class="fas fa-bell">
-            </i>
-            Notifikasi
-        </a>
-        <a href="#">
-            <i class="fas fa-user">
-            </i>
-            Akun
-        </a>
-    </div>
+
 </body>
 
 </html>
