--- a/akun.html
+++ b/akun.html
@@ -11,7 +11,82 @@
 
 </head>
 
+
+<style>
+    .navbar {
+        background-color: #6a1b0c;
+    }
+
+    .navbar-brand {
+        font-weight: bold;
+        color: white;
+    }
+
+    .navbar-brand:hover {
+        color: #f1c40f;
+    }
+
+    .nav-link {
+        color: white !important;
+    }
+
+    .nav-link:hover {
+        color: #f1c40f !important;
+    }
+
+    .speed-text {
+        font-family: 'Galada', sans-serif;
+        color: #FBE87B;
+    }
+    .dish-text {
+        font-family: 'Inter', sans-serif;
+        color: #FFFFFF;
+    }
+
+    .cart-icon {
+            font-size: 1.5rem;
+            color: #6a1b0c;
+            background-color: #fff;
+            border-radius: 50%;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 10px;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+
+        .cart-icon:hover {
+            transform: scale(1.1);
+            color: #8e2d16;
+        }
+
+</style>
+</head>
+
 <body>
+    <!-- Navbar -->
+<nav class="navbar navbar-expand-lg">
+    <div class="container">
+        <a class="navbar-brand d-flex align-items-center" href="#">
+            <span class="speed-text">Speed</span>
+            <span class="dish-text">Dish</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Favorit</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Pesanan</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Notifikasi</a></li>
+                <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link" href="#">Account</a>
+                    <i class="fas fa-shopping-cart cart-icon"></i>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
     <div class="header">
         Akun
     </div>
@@ -138,33 +213,7 @@
             </i>
         </div>
     </div>
-    <div class="footer">
-        <a href="#">
-            <i class="fas fa-home">
-            </i>
-            Beranda
-        </a>
-        <a href="#">
-            <i class="fas fa-heart">
-            </i>
-            Favorit
-        </a>
-        <a href="#">
-            <i class="fas fa-clipboard-list">
-            </i>
-            Pesanan
-        </a>
-        <a href="#">
-            <i class="fas fa-bell">
-            </i>
-            Notifikasi
-        </a>
-        <a href="#">
-            <i class="fas fa-user">
-            </i>
-            Akun
-        </a>
-    </div>
+    
 </body>
 
 </html>
