--- a/akun.html
+++ b/akun.html
@@ -16,6 +16,8 @@
 <style>
     .navbar {
         background-color: #6a1b0c;
+        text-align: center;
+        box-shadow: 0 20px 40px 0 rgba(0,0,0,0.1);
     }
 
     .navbar-brand {
@@ -61,11 +63,6 @@
         color: #8e2d16;
     }
 
-    .greetings {
-        padding-top: 1em;
-        padding-bottom: 1rem;
-        padding-right: 37rem;
-    }
 </style>
 </head>
 
@@ -95,7 +92,7 @@
         </div>
     </nav>
     <!-- Search Bar and Cart Icon -->
-    <div class="container mt-4">
+    <div class="greetings container mt-3">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <div class="d-flex align-items-center">
                 <h6 class="mb-0">Hai, Anastasya</h6>
