--- a/login-register.html
+++ b/login-register.html
@@ -76,7 +76,7 @@
                     <i class="bx bx-envelope"></i>
                 </div>
                 <div class="input-box">
-                    <input type="password" class="input-field" placeholder="Retaype Password">
+                    <input type="password" class="input-field" placeholder="Retype Password">
                     <i class="bx bx-lock-alt"></i>
                 </div>
                 <div class="input-box">
