--- a/akun.html
+++ b/akun.html
@@ -112,13 +112,13 @@
     </div>
     <div class="container">
         <div class="menu-item">
-            <div>
+            <a href="info_akun.html" class="menu-link">
                 <i class="fas fa-user-circle">
                 </i>
                 <span>
                     Informasi Pengguna
                 </span>
-            </div>
+            </a>
             <i class="fas fa-chevron-right">
             </i>
         </div>
