--- a/beranda.html
+++ b/beranda.html
@@ -50,7 +50,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pesanan</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown" id="">
                         <a class="nav-link dropdown-toggle" href="akun.html" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Akun
