--- a/beranda.html
+++ b/beranda.html
@@ -22,7 +22,9 @@
 <link rel="stylesheet" href="/style css/beranda.css">
 
 <body>
+    
     <nav class="navbar navbar-expand-lg shadow-lg" >
+        
         <div class="container" >
             <nav class="navbar bg-body-tertiary"  >
                 <div class="container">
@@ -51,7 +53,7 @@
                         <a class="nav-link" href="#">Pesanan</a>
                     </li>
                     <li class="nav-item dropdown" id="">
-                        <a class="nav-link dropdown-toggle" href="akun.html" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Akun
                         </a>
@@ -492,7 +494,8 @@
 
         <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#6a1b0c" fill-opacity="1" d="M0,192L26.7,165.3C53.3,139,107,85,160,101.3C213.3,117,267,203,320,229.3C373.3,256,427,224,480,192C533.3,160,587,128,640,138.7C693.3,149,747,203,800,208C853.3,213,907,171,960,160C1013.3,149,1067,171,1120,170.7C1173.3,171,1227,149,1280,149.3C1333.3,149,1387,171,1413,181.3L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z" style="--darkreader-inline-fill: #55160a;" data-darkreader-inline-fill=""></path></svg> -->
 
-
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 
 </html>
