--- a/favorit.html
+++ b/favorit.html
@@ -7,117 +7,40 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
+    <link rel="stylesheet" href="/style css/favorit.css">
+    <link rel="stylesheet" href="/style css/navbar.css">
+    <link rel="stylesheet" href="style css/footer.css">
 
-        .header {
-            background-color: #ffd700;
-            padding: 20px;
-            position: relative;
-        }
 
-        .header .time {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .header .location {
-            font-size: 18px;
-            font-weight: bold;
-            color: red;
-        }
-
-        .header .cart {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            font-size: 24px;
-            color: white;
-            background-color: red;
-            border-radius: 50%;
-            padding: 10px;
-        }
-
-        .content {
-            padding: 20px;
-        }
-
-        .content h2 {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .food-item {
-            display: flex;
-            align-items: center;
-            background-color: white;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 10px;
-        }
-
-        .food-item img {
-            width: 100px;
-            height: 100px;
-            border-radius: 10px;
-            margin-right: 10px;
-        }
-
-        .food-item .details {
-            flex-grow: 1;
-        }
-
-        .food-item .details h3 {
-            font-size: 18px;
-            font-weight: bold;
-            margin: 0;
-        }
-
-        .food-item .details p {
-            margin: 0;
-            color: gray;
-        }
-
-        .food-item .details .rating {
-            color: gold;
-        }
-
-        .food-item .details .discount {
-            background-color: #ffd700;
-            padding: 2px 5px;
-            border-radius: 5px;
-            font-size: 12px;
-            margin-right: 5px;
-        }
-
-        .food-item .favorite {
-            font-size: 24px;
-            color: red;
-        }
-
-        .footer {
-            background-color: #ffd700;
-            padding: 10px;
-            display: flex;
-            justify-content: space-around;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .footer .footer-item {
-            text-align: center;
-            font-size: 18px;
-        }
-    </style>
 </head>
 
 <body>
+    
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <span class="speed-text">Speed</span>
+                <span class="dish-text">Dish</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pesan.html">Pesanan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="#">Account</a>
+                        <i class="fas fa-shopping-cart cart-icon"></i>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </nav>
+    
     <div class="header">
         <div class="time">
             9:41
@@ -307,38 +230,12 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        <div class="footer-item">
-            <i class="fas fa-home">
-            </i>
-            <br />
-            Beranda
-        </div>
-        <div class="footer-item">
-            <i class="fas fa-heart">
-            </i>
-            <br />
-            Favorit
-        </div>
-        <div class="footer-item">
-            <i class="fas fa-clipboard-list">
-            </i>
-            <br />
-            Pesanan
-        </div>
-        <div class="footer-item">
-            <i class="fas fa-bell">
-            </i>
-            <br />
-            Notifikasi
-        </div>
-        <div class="footer-item">
-            <i class="fas fa-user">
-            </i>
-            <br />
-            Akun
-        </div>
-    </div>
+    <footer class="footer text-center">
+        <p>&copy; 2024 Food App | <a href="#">Privacy Policy</a></p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 
 </html>
