--- a/favorit.html
+++ b/favorit.html
@@ -18,7 +18,7 @@
     
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="#">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <span class="speed-text">Speed</span>
                 <span class="dish-text">Dish</span>
             </a>
@@ -52,6 +52,8 @@
                 Sidorekso
             </span>
         </div>
+
+        <a href="keranjang.html" class="text-decoration-none text-dark">
         <div class="cart">
             <i class="fas fa-shopping-cart">
             </i>
@@ -61,6 +63,8 @@
         <h2>
             Favorit
         </h2>
+
+        <a href="detail_menu.html" class="text-decoration-none text-dark">
         <div class="food-item">
             <img alt="Image of Dimsum Mentai" height="100"
                 src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg"
@@ -89,6 +93,8 @@
                 </i>
             </div>
         </div>
+
+        <a href="detail_menu.html" class="text-decoration-none text-dark">
         <div class="food-item">
             <img alt="Image of Bubur Ayam H. Syukur" height="100"
                 src="https://storage.googleapis.com/a1aa/image/ng1W0QeOrKWKMKcwUKP3wjGnC0zEpc6Hmrb9hzDLwoh0t02JA.jpg"
@@ -117,6 +123,8 @@
                 </i>
             </div>
         </div>
+
+        <a href="detail_menu.html" class="text-decoration-none text-dark">
         <div class="food-item">
             <img alt="Image of Salad Buah" height="100"
                 src="https://storage.googleapis.com/a1aa/image/bxLCcqRc5XI1NNIeCQdfCqlEVn9TpbUfAfc5x86qqeGFcLtdC.jpg"
@@ -145,6 +153,8 @@
                 </i>
             </div>
         </div>
+
+        <a href="detail_menu.html" class="text-decoration-none text-dark">
         <div class="food-item">
             <img alt="Image of Chinese Food 38" height="100"
                 src="https://storage.googleapis.com/a1aa/image/Mqlvv4vlZ8qBJxhn39R5KFBt7WfkFDXfRndntxoTBxfJ3SbnA.jpg"
@@ -163,62 +173,6 @@
                 </p>
                 <span class="discount">
                     Diskon 101%
-                </span>
-                <span class="discount">
-                    Diskon Ongkir
-                </span>
-            </div>
-            <div class="favorite">
-                <i class="fas fa-heart">
-                </i>
-            </div>
-        </div>
-        <div class="food-item">
-            <img alt="Image of Penyetan Pak Kasno" height="100"
-                src="https://storage.googleapis.com/a1aa/image/P9fDyfjVqIubgUyBa80YLCUd3VDTqiLfloYIksaueuMcul2OB.jpg"
-                width="100" />
-            <div class="details">
-                <h3>
-                    Penyetan Pak Kasno
-                </h3>
-                <p>
-                    Ayam | Warung Pak Kasno
-                </p>
-                <p class="rating">
-                    <i class="fas fa-star">
-                    </i>
-                    1.2 (1000) | 1km | 20min
-                </p>
-                <span class="discount">
-                    Diskon 100%
-                </span>
-                <span class="discount">
-                    Diskon Ongkir
-                </span>
-            </div>
-            <div class="favorite">
-                <i class="fas fa-heart">
-                </i>
-            </div>
-        </div>
-        <div class="food-item">
-            <img alt="Image of Kedai Seblak" height="100"
-                src="https://storage.googleapis.com/a1aa/image/LLRnqlxT4TrLH1SFriifMmlGfO5XQOWjzEWpzRu1TePV3SbnA.jpg"
-                width="100" />
-            <div class="details">
-                <h3>
-                    Kedai Seblak
-                </h3>
-                <p>
-                    Seblak | Seblak Hot Hot
-                </p>
-                <p class="rating">
-                    <i class="fas fa-star">
-                    </i>
-                    1.2 (1000) | 1km | 20min
-                </p>
-                <span class="discount">
-                    Diskon 100%
                 </span>
                 <span class="discount">
                     Diskon Ongkir
