--- a/keranjang.html
+++ b/keranjang.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header class="header">
             <h1>Keranjang Belanja</h1>
-            <a href="#" class="btn-back">Kembali</a>
+            <a href="index.html" class="btn-back">Kembali</a>
         </header>
         <section class="cart">
             <p class="cart-message">Selamat datang di keranjang belanja Anda! Berikut adalah item yang telah Anda pilih:</p>
