--- a/login-register.html
+++ b/login-register.html
@@ -31,7 +31,7 @@
             <!------------------- login form -------------------------->
             <div class="login-container" id="login">
                 <div class="top">
-                    <span>Tidak Punya Akun ? <a href="#" onclick="register()">Sign Up</a></span>
+                    <span>Belum Punya Akun ? <a href="#" onclick="register()">Sign Up</a></span>
                     <header>Login</header>
                 </div>
                 <div class="input-box">
@@ -42,16 +42,18 @@
                     <input type="password" class="input-field" placeholder="Password">
                     <i class="bx bx-lock-alt"></i>
                 </div>
+                <a href="index.html">
                 <div class="input-box">
                     <input type="submit" class="submit" value="Sign In">
                 </div>
+                </a>
                 <div class="two-col">
                     <div class="one">
                         <input type="checkbox" id="login-check">
                         <label for="login-check">Ingat Saya</label>
                     </div>
                     <div class="two">
-                        <label><a href="#">Forgot password?</a></label>
+                        <label><a href="#">Lupa password?</a></label>
                     </div>
                 </div>
             </div>
@@ -79,9 +81,11 @@
                     <input type="password" class="input-field" placeholder="Retype Password">
                     <i class="bx bx-lock-alt"></i>
                 </div>
+                <a href="index.html">
                 <div class="input-box">
                     <input type="submit" class="submit" value="Register">
                 </div>
+                </a>
                 <div class="two-col">
                     <div class="one">
                         <input type="checkbox" id="register-check">
