--- a/pesanan_diproses.html
+++ b/pesanan_diproses.html
@@ -7,148 +7,40 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <style>
-        body {
-            background-color: #E0E0E0;
-            font-family: 'Arial', sans-serif;
-        }
 
-        .header {
-            background-color: #7B1E1E;
-            color: white;
-            padding: 10px;
-            position: relative;
-        }
+    <link rel="stylesheet" href="style css/pesanan_diproses.css">
+    <link rel="stylesheet" href="style css/navbar.css">
 
-        .header .back-icon,
-        .header .chat-icon {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-        }
 
-        .header .back-icon {
-            left: 10px;
-        }
-
-        .header .chat-icon {
-            right: 10px;
-        }
-
-        .header h1 {
-            text-align: center;
-            margin: 0;
-            font-size: 24px;
-        }
-
-        .nav-tabs {
-            margin-top: 10px;
-            border-bottom: 1px solid #7B1E1E;
-        }
-
-        .nav-tabs .nav-link {
-            color: #7B1E1E;
-        }
-
-        .nav-tabs .nav-link.active {
-            color: #7B1E1E;
-            border-color: #7B1E1E;
-        }
-
-        .order-card {
-            background-color: white;
-            border-radius: 10px;
-            padding: 10px;
-            margin: 10px 0;
-        }
-
-        .order-card img {
-            border-radius: 10px;
-        }
-
-        .order-card .order-info {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .order-card .order-info .order-details {
-            display: flex;
-            align-items: center;
-        }
-
-        .order-card .order-info .order-details img {
-            width: 50px;
-            height: 50px;
-            margin-right: 10px;
-        }
-
-        .order-card .order-info .order-details .order-text {
-            font-size: 14px;
-            color: #333;
-        }
-
-        .order-card .order-info .order-details .order-text .price {
-            font-weight: bold;
-        }
-
-        .order-card .order-info .order-details .order-text .items {
-            color: #888;
-        }
-
-        .order-card .order-info .order-id {
-            color: #888;
-            font-size: 12px;
-        }
-
-        .order-card .order-actions {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 10px;
-        }
-
-        .order-card .order-actions .btn {
-            width: 48%;
-        }
-
-        .order-card .order-actions .btn-track {
-            background-color: #FFD700;
-            color: black;
-        }
-
-        .order-card .order-actions .btn-cancel {
-            border: 1px solid #FFD700;
-            color: #7B1E1E;
-        }
-
-        .footer {
-            background-color: #FFD700;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            display: flex;
-            justify-content: space-around;
-        }
-
-        .footer .footer-icon {
-            text-align: center;
-            color: #333;
-        }
-
-        .footer .footer-icon i {
-            font-size: 20px;
-        }
-
-        .footer .footer-icon p {
-            margin: 0;
-            font-size: 12px;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="header">
+
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
+                    <span class="speed-text">Speed</span>
+                    <span class="dish-text">Dish</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
+                        <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
+                        <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
+                        <li class="nav-item d-flex align-items-center">
+                            <a class="nav-link" href="akun.html">Account</a>
+                            <i class="fas fa-shopping-cart cart-icon"></i>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    <!-- <div class="header">
         <i class="fas fa-arrow-left back-icon">
         </i>
         <h1>
@@ -156,7 +48,7 @@
         </h1>
         <i class="fas fa-comment-dots chat-icon">
         </i>
-    </div>
+    </div> -->
     <ul class="nav nav-tabs justify-content-center">
         <li class="nav-item">
             <a class="nav-link active" href="#">
@@ -164,7 +56,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="riwayat_pesanan.html">
                 Riwayat
             </a>
         </li>
@@ -194,7 +86,9 @@
             </div>
             <div class="order-actions">
                 <button class="btn btn-track">
+                    <a href="pesanan_diproses.html" class="text-decoration-none text-dark">
                     Lacak Pesanan
+                    </a>
                 </button>
                 <button class="btn btn-cancel">
                     Batalkan
@@ -225,7 +119,9 @@
             </div>
             <div class="order-actions">
                 <button class="btn btn-track">
+                    <a href="pesanan_diproses.html" class="text-decoration-none text-dark">
                     Lacak Pesanan
+                    </a>
                 </button>
                 <button class="btn btn-cancel">
                     Batalkan
@@ -256,7 +152,9 @@
             </div>
             <div class="order-actions">
                 <button class="btn btn-track">
+                    <a href="pesanan_diproses.html" class="text-decoration-none text-dark">
                     Lacak Pesanan
+                    </a>
                 </button>
                 <button class="btn btn-cancel">
                     Batalkan
@@ -264,43 +162,9 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        <div class="footer-icon">
-            <i class="fas fa-home">
-            </i>
-            <p>
-                Beranda
-            </p>
-        </div>
-        <div class="footer-icon">
-            <i class="fas fa-heart">
-            </i>
-            <p>
-                Favorit
-            </p>
-        </div>
-        <div class="footer-icon">
-            <i class="fas fa-clipboard-list">
-            </i>
-            <p>
-                Pesanan
-            </p>
-        </div>
-        <div class="footer-icon">
-            <i class="fas fa-bell">
-            </i>
-            <p>
-                Notifikasi
-            </p>
-        </div>
-        <div class="footer-icon">
-            <i class="fas fa-user">
-            </i>
-            <p>
-                Akun
-            </p>
-        </div>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 
 </html>
