--- a/riwayat_pesanan.html
+++ b/riwayat_pesanan.html
@@ -7,109 +7,39 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <style>
-        body {
-            background-color: #E0E0E0;
-            font-family: 'Arial', sans-serif;
-        }
 
-        .header {
-            background-color: #7B1E1E;
-            color: white;
-            padding: 20px;
-            position: relative;
-        }
+    <link rel="stylesheet" href="style css/riwayat_pesanan.css">
+    <link rel="stylesheet" href="style css/navbar.css">
 
-        .header .back-icon {
-            position: absolute;
-            left: 20px;
-            top: 20px;
-        }
-
-        .header .chat-icon {
-            position: absolute;
-            right: 20px;
-            top: 20px;
-        }
-
-        .tab-menu {
-            display: flex;
-            justify-content: center;
-            margin-top: 10px;
-        }
-
-        .tab-menu div {
-            margin: 0 20px;
-            font-weight: bold;
-            color: #7B1E1E;
-        }
-
-        .tab-menu .active {
-            border-bottom: 2px solid #7B1E1E;
-        }
-
-        .order-item {
-            background-color: white;
-            margin: 10px;
-            padding: 10px;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-        }
-
-        .order-item img {
-            width: 60px;
-            height: 60px;
-            border-radius: 10px;
-        }
-
-        .order-details {
-            flex-grow: 1;
-            margin-left: 10px;
-        }
-
-        .order-details h5 {
-            margin: 0;
-            font-weight: bold;
-        }
-
-        .order-details p {
-            margin: 0;
-            color: #6C757D;
-        }
-
-        .order-actions {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .order-actions .btn {
-            margin: 5px 0;
-        }
-
-        .footer {
-            background-color: #FFD700;
-            padding: 10px 0;
-            display: flex;
-            justify-content: space-around;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .footer .nav-item {
-            text-align: center;
-        }
-
-        .footer .nav-item i {
-            display: block;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="header">
+
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
+                    <span class="speed-text">Speed</span>
+                    <span class="dish-text">Dish</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
+                        <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
+                        <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
+                        <li class="nav-item d-flex align-items-center">
+                            <a class="nav-link" href="akun.html">Account</a>
+                            <i class="fas fa-shopping-cart cart-icon"></i>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    <!-- <div class="header">
         <i class="fas fa-arrow-left back-icon">
         </i>
         <h4 class="text-center">
@@ -117,10 +47,13 @@
         </h4>
         <i class="fas fa-comment-dots chat-icon">
         </i>
-    </div>
+    </div> -->
     <div class="tab-menu">
+
         <div>
+            <a href="pesanan_diproses.html" class="text-decoration-none text-dark">
             Diproses
+            </a>
         </div>
         <div class="active">
             Riwayat
@@ -204,7 +137,8 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+
+    <!-- <div class="footer">
         <div class="nav-item">
             <i class="fas fa-home">
             </i>
@@ -240,7 +174,12 @@
                 Akun
             </p>
         </div>
-    </div>
+    </div> -->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
