--- a/favorit.html
+++ b/favorit.html
@@ -7,118 +7,16 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
-
-        .header {
-            background-color: #ffd700;
-            padding: 20px;
-            position: relative;
-        }
-
-        .header .time {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .header .location {
-            font-size: 18px;
-            font-weight: bold;
-            color: red;
-        }
-
-        .header .cart {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            font-size: 24px;
-            color: white;
-            background-color: red;
-            border-radius: 50%;
-            padding: 10px;
-        }
-
-        .content {
-            padding: 20px;
-        }
-
-        .content h2 {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .food-item {
-            display: flex;
-            align-items: center;
-            background-color: white;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 10px;
-        }
-
-        .food-item img {
-            width: 100px;
-            height: 100px;
-            border-radius: 10px;
-            margin-right: 10px;
-        }
-
-        .food-item .details {
-            flex-grow: 1;
-        }
-
-        .food-item .details h3 {
-            font-size: 18px;
-            font-weight: bold;
-            margin: 0;
-        }
-
-        .food-item .details p {
-            margin: 0;
-            color: gray;
-        }
-
-        .food-item .details .rating {
-            color: gold;
-        }
-
-        .food-item .details .discount {
-            background-color: #ffd700;
-            padding: 2px 5px;
-            border-radius: 5px;
-            font-size: 12px;
-            margin-right: 5px;
-        }
-
-        .food-item .favorite {
-            font-size: 24px;
-            color: red;
-        }
-
-        .footer {
-            background-color: #ffd700;
-            padding: 10px;
-            display: flex;
-            justify-content: space-around;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .footer .footer-item {
-            text-align: center;
-            font-size: 18px;
-        }
-    </style>
+    <link rel="stylesheet" href="style css/favorit.css">
 </head>
 
 <body>
     <div class="header">
+        <div class="back-button">
+            <a href="beranda.html" class="btn btn-light">
+                <i class="fas fa-arrow-left"></i> Kembali
+            </a>
+        </div>
         <div class="time">
             9:41
         </div>
@@ -134,6 +32,7 @@
             </i>
         </div>
     </div>
+<!--------------------------favorit------------------------------->
     <div class="content">
         <h2>
             Favorit
@@ -307,6 +206,8 @@
             </div>
         </div>
     </div>
+
+<!---------------------favorit---------------------------->
     <div class="footer">
         <div class="footer-item">
             <i class="fas fa-home">
